# analysis-hackathon

./: .gitignore  README.md  pyproject.toml
analysis_hackathon/: Home.py  __main__.py
analysis_hackathon/models/: __init__.py  solar_power.py
analysis_hackathon/pages/: Solar_Power_Prediction.py
analysis_hackfest/: __main__.py  app.py
analysis_hackfest/app_pages/: co2_emission.py  co2_emission_prediction.py  solar_power.py
analysis_hackfest/assets/: FuelConsumptionCo2.csv
analysis_hackfest/models/: __init__.py  co2_emission.py  solar_power.py
analysis_hackfest/pages/: Solar_Power_Prediction.py  future.py  solar_power_prediction.py
notebooks/: Machine_Learning_to_predict_Energy_Consumption.ipynb  Regression - Carbon Dioxide (CO2) Project.ipynb  analysis-of-landfills-in-america.ipynb  carbon-emission-country-wise.ipynb  electricity-condsumption.ipynb  electricity-consumption.ipynb  global-wind-energy-production.ipynb  solar-power-generation-forecast.ipynb  time-series-forecasting-with-machine-learning.ipynb
