[tool.poetry]
name = "analysis-hackathon"
version = "0.1.0"
description = ""
authors = ["nozwock"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.21.0"
nbformat = "^5.10.4"
raceplotly = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
