[tool.poetry]
name = "analysis-hackfest"
version = "0.1.0"
description = ""
authors = ["nozwock"]
readme = "README.md"

[tool.poetry.scripts]
analysis-hackfest = 'analysis_hackfest.__main__:run'

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
skl2onnx = "^1.16.0"
onnxruntime = "^1.17.3"
# streamlit-pydantic = "^0.6.0"
streamlit-pydantic = { git = "https://github.com/HIL340/streamlit-pydantic.git", rev = "pydantic-2.7" }
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.21.0"
nbformat = "^5.10.4"
raceplotly = "^0.1.7"
keras = "^3.3.2"
tensorflow = "^2.16.1"
folium = "^0.16.0"
geopandas = "^0.14.3"
scipy = "^1.13.0"
missingno = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
